--- a/src/SignUpModal.scss
+++ b/src/SignUpModal.scss
@@ -1,34 +1,34 @@
-.singup-modal {
-    form {
-        margin-bottom: 20px;
-        legend {
-            font-size: 1em;
-        }
-        .select-group {
-            margin-bottom: 20px;
-            select {
-                width: fit-content;
-                padding: 5px 10px;
-                margin-right: 5px;
-            }
-        }
-        .radio-group {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            border: solid black 1px;
-            border-radius: 5px;
-            width: fit-content;
-            padding: 10px;
-            input {
-                margin-right: 5px;
-                padding: 8px;
-            }
-        }
+.sign-up-modal {
+  form {
+    margin-bottom: 20px;
+    legend {
+      font-size: 1em;
     }
-    .modal-footer {
-        display: flex;
-        justify-content: center;
+    .select-group {
+      margin-bottom: 20px;
+      select {
+        width: fit-content;
+        padding: 5px 10px;
+        margin-right: 5px;
+      }
     }
+    .radio-group {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      border: solid black 1px;
+      border-radius: 5px;
+      width: fit-content;
+      padding: 10px;
+      input {
+        margin-right: 5px;
+        padding: 8px;
+      }
+    }
+  }
+  .modal-footer {
+    display: flex;
+    justify-content: center;
+  }
 }
